fix(music): add music

--- a/FLORES.html
+++ b/FLORES.html
@@ -307,6 +307,9 @@
         </div>
       </div>
     </div>
+
+    <audio id="flowerMusic" src="music/Floricienta.mp3" autoplay></audio>
+
     <script src="main.js"></script>
   </body>
 </html>
