--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 </head>
 <body>
     <div class="greetings">
-
         <span>H</span>
         <span>O</span>
         <span>L</span>
+        <span>A</span>
+        <br>
+        <span>P</span>
+        <span>R</span>
+        <span>I</span>
+        <span>N</span>
+        <span>C</span>
+        <span>E</span>
+        <span>S</span>
         <span>A</span>
     </div>
     <div class="greetings">
@@ -31,7 +39,6 @@
         <button>
             <a href="FLORES.html">Haga Clic</a>
         </button>
-        
     </div>
 </body>
 </html>
